<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="52dp" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelViaje"
                style="@style/labelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/labelOrigen_destino" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerOrigen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/flyes"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                <Spinner
                    android:id="@+id/spinnerDestino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/flyes"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <TextView
                android:id="@+id/labelDate"
                style="@style/labelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_fecha_origen_destino" />

            <LinearLayout
                android:id="@+id/fechaInputs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/inputFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/origen"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            </LinearLayout>

            <TextView
                android:id="@+id/labelName"
                style="@style/labelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameLabel" />

            <LinearLayout
                android:id="@+id/nameInputs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spnPrefix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/prefix"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/inputName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            </LinearLayout>

            <TextView
                android:id="@+id/labelSurname"
                style="@style/labelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/surnameLabel" />

            <EditText
                android:id="@+id/inputSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/labelAddress"
                style="@style/labelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelAddress"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/inputAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPostalAddress"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/labelPhone"
                style="@style/labelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelPhone" />

            <EditText
                android:id="@+id/inputPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/labelEmail"
                style="@style/labelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelEmail" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <Switch
                android:id="@+id/swMovRed"
                style="@style/labelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/labelDisabled" />

            <TextView
                android:id="@+id/labelServices"
                style="@style/labelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelAV" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/groupExtras"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:constraint_referenced_ids="checkBox,checkBox2,checkBox5,checkBox4" />

            <LinearLayout
                android:id="@+id/moreServices"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sv_PrimeraClase" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sv_Ventanilla" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/moreServices2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sv_Dietas" />

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sv_Mascotas" />

            </LinearLayout>

            <TextView
                android:id="@+id/labelEnsurence"
                style="@style/labelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/labelEnsurance" />

            <TextView
                android:id="@+id/ensuranceConditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descSeguroAdicional" />

            <RadioGroup
                android:id="@+id/options"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbYesEns"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/EnsuranceYEs" />

                <RadioButton
                    android:id="@+id/rbNoEns"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/ensuranceNo" />

            </RadioGroup>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/descSep"
                android:scaleType="center"
                app:srcCompat="@android:drawable/divider_horizontal_textfield" />

            <Switch
                android:id="@+id/swTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/termsLabel" />

            <TextView
                android:id="@+id/btBuyPremium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonshinyfixed"
                android:gravity="center"
                android:text="@string/premium_buy_button"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btBuyNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnCompraNormal" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>